--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 						<div class="content">
 							<h2>Project ideas</h2>
 							<p>After acquiring proper theoritical and practical knowledge, I would like to devolop a smartphone app that could help people to gain any knowledge or updates them on any topic in a matter or seconds using an artificial intelligeence software. Consumers just need to ask the app and app will answer their questions in seconds. Consumers can ask the app to search any data from web or update them with the current news or they can ask to set reminders, etc. The app could work as a virtual personal assistant  which will response only to it's  own consumer by detacting his/her voice commands. Thia assistant can engage in two-way conversation in any of the preferred language of the consumer. </p>
-							<p> In this fast-paced world of technology, virtual personal assistants are having a huge monent. Statistics reveal that half of the UK workforce will want to work remotely by 2020. From the side of entrepreneur or business or any indivudual, who wouldn't want a totally-efficient, totally-affordable employee who self-manages from anywhere that doesn't cost a thing? Virtual assistant apps manage tasks at a lightening speed.</p>
+							<p> In this fast-paced world of technology, virtual personal assistants are having a huge monent. Statistics reveal that half of the UK workforce will want to work remotely by 2020. Around 60.5 million people in the US alone constantly use voice-enabled digital assistants. From the side of entrepreneur or business or any indivudual, who wouldn't want a totally-efficient, totally-affordable employee who self-manages from anywhere that doesn't cost a thing? Virtual assistant apps manage tasks at a lightening speed.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
 							</ul>
@@ -293,7 +293,10 @@
 <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							
-							<p>
+							<p>Voice assistants are very well a part of our lives today but there are many hurdles to create such application. The ability to recognize and manage the voice-controlled communication and devices at large has been a constant bottleneck. Secondly, thhese technologies can't go beyond single-threaded conversations and into multi-threaded conversations with even basic context. All these obstacles need to be tackled with the passage of time with proper skills and knowledge. Some basic skills required to develop such applications is an expertise knowledge of at least one or two progrmming language with an idea of user experience.
+								Before working on such projects, a survey needs to be conducted to get information of users needs and how they want their assistants to work for them. During the development of this application, privacy of users has be considered as many users feel that such applications spy on them and their work.</p>
+							<p>As an entrepreneur, first we need to find a source of funds or compamany which will invest on such projects. The artiicial intelligence led future is here now, I will try to develop an advance version of such artifical intelligence. This application can be used in any field for any kind of job, from speaking a recipe, to book a cab, to get an article, etc. This artificial assistant will have speech-to-text and text-to-speech software.</p>
+							<p>If the project is successful, this will effictively reduce the work and time load for everyone as much of the task will be done by the assistand in just one command. Now, users can use that saved time on other activities or simply take a peaceful breath from their busy schedule. Even after its success, surveys will be conducted to monitor users need and experience for its update. Such technologies will take development to a next level.
 							</p>
 							
 						</div>
