--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 							
 						</div>
 						<div class="image">
-							<img src="22.jpg" alt="" />
+							<img src="last.jpg" alt="" />
 						</div>
 					</section>
 				
